<resources>
    <string name="app_name">My Application</string>
    <string name="app_name_test">Тестовое приложение</string>
    <string name="data_view_1">Вычисление определенного интеграла</string>
    <string name="data_view_2">Выберите необходимую функцию:</string>
    <string name="data_view_3">Укажите пределы интегрирования</string>
    <string name="data_activityInstall">Установка значений</string>

    <string name="button">Вычислить</string>
    <string name="getting_button">Получить значения</string>
    <string name="back_button">Установить значение</string>

    <string name="resultScreen_view1">Получение значения определенного интеграла</string>
    <string name="resultScreen_view2_1">Результат: </string>
    <string name="resultScreen_view2_2">0</string>

    <string name="data_functions_1">X<sup>2</sup></string>
    <string name="data_functions_2">X<sup>3</sup>+X<sup>2</sup>-5</string>
    <string name="data_functions_3">X<sup>4</sup>+X<sup>2</sup>+25</string>
    <string name="data_functions_4">cos(X)<sup>2</sup></string>
    <string name="data_functions_5">sin(X)<sup>2</sup></string>
    <string name="data_functions_6">(X+5)<sup>2</sup></string>

    <string name="check">ПРОВЕРКА</string>

    <string name="editText_warning1">Ошибка! Проверьте пределы интегрирования!</string>
    <string name="editText_warning2">Ошибка! Нижний предел больше верхнего!</string>

    <string name="function1_description">Выбрана функция 1</string>
    <string name="function2_description">Выбрана функция 2</string>
    <string name="function3_description">Выбрана функция 3</string>
    <string name="function4_description">Выбрана функция 4</string>
    <string name="function5_description">Выбрана функция 5</string>
    <string name="function6_description">Выбрана функция 6</string>
</resources>