<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_about_content"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/resultScreen_view1"
        android:background="@color/red"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="30sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <TextView
        android:id="@+id/textView_result1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultScreen_view2_1"
        android:background="@color/red"
        android:layout_marginTop="50dp"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/textView_about_content"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/textView_result2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultScreen_view2_2"
        android:background="@color/red"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/textView_about_content"
        app:layout_constraintLeft_toRightOf="@+id/textView_result1"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/getting_button"
        android:onClick="onClickButton"
        android:layout_marginBottom="100px"
        app:layout_constraintRight_toLeftOf="@id/textView_invis"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textView_invis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="100px"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/back_button"
        android:onClick="onClickBack"
        android:layout_marginBottom="100px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/textView_invis"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>